# dodopayments-rust

./: .gitignore  .release-please-manifest.json  Brewfile  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  api.md  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish-crates.yml  release-please.yml
examples/: .keep
lib/: .keep
scripts/: bootstrap  build  fast-format  lint  mock  test
src/: client.rs  config.rs  error.rs  lib.rs  models.rs  resources.rs
tests/: api.rs  usage.rs
