[package]
name = "dodopayments"
version = "1.105.0"
edition = "2021"
description = "The official Rust library for the Dodo Payments API"
authors = ["Dodo Payments <support@dodopayments.com>"]
license = "Apache-2.0"
repository = "https://github.com/dodopayments/dodopayments-rust"
homepage = "https://docs.dodopayments.com/api-reference/introduction"
documentation = "https://docs.rs/dodopayments"
readme = "README.md"
keywords = ["sdk", "api", "dodopayments"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
rand = "0.8"
httpdate = "1"
